# solutis_manager_back

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  agile-app.yaml  alembic.ini  docker-compose.yaml  docker-compose.yml  docker_build.sh  docker_migrate.sh  openssl.cnf  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: pylint.yml
alembic/: env.py
alembic/versions/: 2023-11-11_new_initial.py  2023-11-15_144429_initial.py  2023-11-17_230348_add_invoice_models.py  2023-11-22_214203_relationship_maintenance.py  2023-11-26_182356_add_refresh_token.py  2023-11-27_211204_initial.py  2023-12-03_131941_add_datasync_models.py  2023-12-04_222913_adjust_center_cost_model.py  2023-12-05_221519_adjust_asset_totvs_model.py  2023-12-05_221820_adjust_asset_totvs_model_2.py  2023-12-05_222205_adjust_asset_totvs_model_3.py  2023-12-05_222608_adjust_asset_totvs_model_4.py  2023-12-05_222915_adjust_asset_totvs_model_5.py  2023-12-06_201418_change_code_totvs_models_to_string.py  2023-12-06_213722_fix_asset_totvs_model.py  2023-12-07_182043_fix_cost_center_asset_totvs_modal.py  2023-12-13_211136_adjust_role_auth_to_group.py  2023-12-13_211951_add_id_to_pivot_tables.py  2023-12-13_212140_adjust_column_name_group.py  2023-12-13_212847_adjust_asset_status.py  2023-12-13_213021_adjust_asset_clothing_size.py  2023-12-13_213735_adjust_status_employee.py  2023-12-13_214845_adjust_colmun_name.py  2023-12-13_215753_adjust_unique_code_totvs.py  2023-12-15_223116_adjust_employee_model.py  2023-12-18_213500_adjust_group_permissions.py  2023-12-18_215402_revert_pivot_tables_id.py  2023-12-18_223116_nullable_code_employee.py  2023-12-22_225850_nullable_code_employee.py  2024-01-09_210042_adjust_env.py  2024-01-09_221349_initial_version_1.py  2024-01-10_220742_adjust_asset_observation_length.py  2024-01-12_141901_add_educational_level.py  2024-01-16_222719_add_update_invoice_pivot_table.py  2024-01-17_161348_update_asset_observations.py  2024-01-17_162815_update_asset_tovs_observations.py  2024-01-17_200603_update_invoice_model.py  2024-01-17_212740_update_invoice_assets_table_pivot.py  (+41 more)
app/: alembic.ini  backends.py  config.py  database.py  exceptions.py  main.py  tasks.py  utils.py
datasync/: backends.py  client.py  config.py  database.py  main.py  models.py  router.py  scheduler.py  schemas.py  service.py  services.py  tasks.py  utils.py
nginx/: config.json
project/: settings.py
src/: backends.py  config.py  database.py  exceptions.py  main.py  schemas.py  teste_tu.py  utils.py
templates/: comodato.html  comodato_pj.html  distrato_comodato.html  distrato_comodato_pj.html  distrato_termo.html  new_user_password.html  notify_inventory_link_email.html  notify_maintenance.html  reset_password.html  termo.html  verification.html
utils/: images.py
(+195 files in other folders)
