[tool.poetry]
name = "solutis-manager-back"
version = "0.1.0"
description = ""
authors = ["Pedro Gustavo Santana <pedrogustavosantan97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
SQLAlchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
alembic = "^1.11.3"
pytest = "^7.4.0"
httpx = "^0.24.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
fastapi-pagination = "^0.12.8"
pyodbc = "^4.0.39"
apscheduler = "^3.10.4"
invoke = "^2.2.0"
python-multipart = "^0.0.6"
pydantic = "^2.3.0"
email-validator = "^2.0.0.post2"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
