[tool.poetry]
name = "solutis-manager-back"
version = "0.1.0"
description = ""
authors = ["Pedro Gustavo Santana <pedrogustavosantan97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
SQLAlchemy = "^2.0.20"
alembic = "^1.11.3"
pytest = "^7.4.0"
httpx = "^0.24.1"
passlib = "^1.7.4"
fastapi-pagination = "^0.12.8"
apscheduler = "^3.10.4"
invoke = "^2.2.0"
python-multipart = "^0.0.6"
pydantic = "^2.3.0"
email-validator = "^2.0.0.post2"
bcrypt = "^4.0.1"
requests = "^2.31.0"
pytz = "^2023.3.post1"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.1"
jinja2 = "^3.1.2"
pdfkit = "^1.0.0"
pyodbc = "^5.0.1"
mysql-connector-python = "^8.2.0"
pyjwt = "^2.8.0"
pymssql = "^2.2.11"
fastapi-filter = "^1.0.0"
pillow = "^10.3.0"
xlsxwriter = "^3.2.0"
python-docx = "^1.1.2"
reportlab = "^4.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.5.0"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
